test_suite/tests/ui/default-attribute/enum_path.stderr
error: #[serde(default = "...")] can only be used on structs with named fields
 --> tests/ui/default-attribute/enum_path.rs:4:9
  |
4 | #[serde(default = "default_e")]
  |         ^^^^^^^^^^^^^^^^^^^^^
